--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<img src="img/work1.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>КАРБОНАРА</h1>
+						<h1>ПАСТА ''КАРБОНАРА''</h1>
 					</div>
 				</div>
 			</a>
@@ -63,7 +63,7 @@
 				<img src="img/work2.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>СПАГЕТТИ С ТОМАТНЫМ СОУСОМ И ПОМИДОРОМ</h1>
+						<h1>СПАГЕТТИ ''НАПОЛИ''</h1>
 					</div>
 				</div>
 			</a>
@@ -74,7 +74,7 @@
 				<img src="img/work3.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>БОЛОНЬЕЗЕ</h1>
+						<h1>ПАСТА ''БОЛОНЬЕЗЕ''</h1>
 					</div>
 				</div>
 			</a>
@@ -85,7 +85,7 @@
 				<img src="img/work4.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>ПАСТА ''ПАППАРДЕЛЛЕ''</h1>
 					</div>
 				</div>
 			</a>
@@ -96,7 +96,7 @@
 				<img src="img/work5.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>ПАСТА ПОД СЛИВОЧНЫМ СОУСОМ ''ПЕСТО''</h1>
 					</div>
 				</div>
 			</a>
@@ -107,7 +107,7 @@
 				<img src="img/work6.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>ПАСТА ''ЛИНГВИНИ'' С ПОМИДОРАМИ И КРЕВЕТКАМИ</h1>
 					</div>
 				</div>
 			</a>
@@ -118,7 +118,7 @@
 				<img src="img/work7.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>ОСТРАЯ ПАСТА С КУРИЦЕЙ</h1>
 					</div>
 				</div>
 			</a>
@@ -129,7 +129,7 @@
 				<img src="img/work8.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>ЛАЗАНЬЯ ''АЛЬ ФОРНО''</h1>
 					</div>
 				</div>
 			</a>
@@ -140,7 +140,7 @@
 				<img src="img/work9.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+						<h1>''ТОРТЕЛЛИНИ''</h1>
 					</div>
 				</div>
 			</a>
