--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@ setTimeout(function () {$(".feedback_form_bg").fadeOut();}, 1000);
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="selected">Главная</a></li>
-				<li><a href="#" class="selected">???????</a></li>
-				<li><a href="#" class="selected">?????</a></li>
+				<li><a href="index.html" class="selected"><b>Меню</b></a></li>
 				<li><a class="poplight" rel="popup_contact" href="#?w=325"><button class="button"><span>Сделать заказ</span></button>
 <script>
 document.querySelector('.button').onmousemove = function (e) {
