--- a/inner3.html
+++ b/inner3.html
@@ -53,6 +53,24 @@
 			<div class="content">
 			<h1 class="title">Паста с соусом ''Болоньезе''</h1>
 				<p>Ragù alla bolognese – мясной соус для итальянской пасты. Рецепт был придуман в Болонье – отсюда и название. Академия Кухни Италии закрепила состав соуса в официальном документе. Его главные ингредиенты – свинина, говядина, итальянский бекон панчетта и мясной бульон. Особую пикантность соусу придают томаты и сухое вино.</p>
+			<p><b>Стоимость 1 порции: 400 рублей.</b></p>
+			<b>Состав:</b>
+			<ul>
+			    <li>Фарш говяжий</li>
+				<li>Спагетти</li>
+				<li>Томатная паста</li>
+				<li>Лук репчатый</li>
+				<li>Сельдерей</li>
+				<li>Вино красное сухое</li>
+				<li>Масло оливковое</li>
+				<li>Сыр "Пармезан"</li>
+				<li>Чеснок</li>
+				<li>Базилик</li>
+				<li>Соль</li>
+				<li>Черный молотый перец</li>
+			 
+			</ul>			
+			
 			</div><!-- end content -->
 		</section>
 	</section><!-- end main -->
