--- a/inner2.html
+++ b/inner2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Lazio</title>
+	<title>Спагетти Наполи</title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "Паста Наполи">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
