--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Lazio меню</title>
+	<title><span itemprop=”name”>Lazio</span></title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "еда доставка, еда новосибирск, заказать еду, Паста новосибирск, Обед доставка, Итальянская кухня, Лацио ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
@@ -110,9 +110,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
