--- a/inner1.html
+++ b/inner1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Паста карбонара</title>
+	<title><span itemprop=”name”>Паста карбонара</span></title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "Паста карбонара, Лацио, паста">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
@@ -110,9 +110,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -137,7 +139,8 @@ e.target.style.setProperty('--y', y + 'px');
 		<section class="wrapper">
 			<div class="content">
 			<h1 class="title">Паста ''Карбонара''</h1>
-				<p>Это спагетти с кусочками гуанчале, заправленные пикантным соусом из яиц, пармезана и пекорино романо, а также душистого свежемолотого перца. Жители Рима утверждают, что «правильную» пасту а-ля карбонара можно попробовать только в их городе и регионе Лацио.</p>
+				<p>Это спагетти с кусочками гуанчале, заправленные пикантным соусом из яиц, пармезана и пекорино романо, а также душистого свежемолотого перца. 
+				Жители Рима утверждают, что «правильную» пасту а-ля карбонара можно попробовать только в их городе и регионе Лацио.</p>
 			<p><b>Стоимость 1 порции: 350 рублей.</b></p>
 			<b>Состав:</b>
 			<ul>
