--- a/inner5.html
+++ b/inner5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Паста с соусом Песто</title>
+	<title><span itemprop=”name”>Паста с соусом Песто</span></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -109,9 +109,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -136,7 +138,8 @@ e.target.style.setProperty('--y', y + 'px');
 		<section class="wrapper">
 			<div class="content">
 			<h1 class="title">Паста под сливочным соусом ''Песто''</h1>
-				<p> Это один из классических рецептов приготовления итальянской пасты. Травы в сочетании с кедровыми орешками, пармезаном и оливковым маслом создают непревзойденный вкус и аромат. </p>
+				<p> Это один из классических рецептов приготовления итальянской пасты. Травы в сочетании с кедровыми орешками, пармезаном и оливковым маслом создают непревзойденный
+				вкус и аромат. </p>
 			<p><b>Стоимость 1 порции: 300 рублей.</b></p>	
             <b>Состав:</b>
 			<ul>
