--- a/inner7.html
+++ b/inner7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Паста с курицей</title>
+	<title><span itemprop=”name”>Паста с курицей</span></title>
 	<meta charset="utf-8">
 	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="Magnetic is a stunning responsive HTML5/CSS3 photography/portfolio website template"/>
@@ -111,9 +111,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -138,7 +140,8 @@ e.target.style.setProperty('--y', y + 'px');
 		<section class="wrapper">
 			<div class="content">
 			<h1 class="title">Острая паста с курицей</h1>
-				<p>Необычное сочетание традиционной итальянской пасты и азиатской технологии приготовления. Острая паста с курицей, это пряное, обжигающее блюдо, которое проверит на прочность ваши вкусовые рецепторы! Готовьтесь к незабываемому кулинарному приключению!</p>
+				<p>Необычное сочетание традиционной итальянской пасты и азиатской технологии приготовления. Острая паста с курицей, это пряное, 
+				обжигающее блюдо, которое проверит на прочность ваши вкусовые рецепторы! Готовьтесь к незабываемому кулинарному приключению!</p>
             <p><b>Стоимость 1 порции: 350 рублей.</b></p>
 			<b>Состав:</b>
 			<ul>
