--- a/inner9.html
+++ b/inner9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Пельмени Тортеллини</title>
+	<title><span itemprop=”name”>Пельмени Тортеллини</span></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -109,9 +109,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center><span itemprop=”streetAddress”>ул.Пушкина 47</span></center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -137,7 +139,9 @@ e.target.style.setProperty('--y', y + 'px');
 			<div class="content">
 			<h1 class="title">Пельмени ''Тортеллини''</h1>
 				
-				<p>Обязательно попробуйте маленькие итальянские пельмени тортеллини. Их иногда называют «пупком Венеры». Размером и формой они действительно напоминают эту часть тела. А болонцы видят в tortellini крохотный бутон розы. Именно в форме заключается главная разница между тортеллини и равиоли. Tortellini готовят с начинкой из мяса.</p>
+				<p>Обязательно попробуйте маленькие итальянские пельмени тортеллини. Их иногда называют «пупком Венеры». 
+				Размером и формой они действительно напоминают эту часть тела. А болонцы видят в tortellini крохотный бутон розы. 
+				Именно в форме заключается главная разница между тортеллини и равиоли. Tortellini готовят с начинкой из мяса.</p>
 			<p><b>Стоимость 1 порции: 400 рублей.</b></p>
 			<b>Состав:</b>
 			<ul>
