--- a/inner2.html
+++ b/inner2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Спагетти Наполи</title>
+	<title><span itemprop=”name”>Спагетти Наполи</span></title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "Паста Наполи">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
@@ -110,9 +110,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -137,7 +139,8 @@ e.target.style.setProperty('--y', y + 'px');
 		<section class="wrapper">
 			<div class="content">
 			<h1 class="title">Спагетти ''Наполи''</h1>
-				<p>Проверенная классика – спагетти по-неаполитански. Паста с томатным соусом нравится почти всем. Соус готовят из сочных спелых томатов с базиликом, пармезаном и чесноком. Получается сочно, свежо и сытно.</p>
+				<p>Проверенная классика – спагетти по-неаполитански. Паста с томатным соусом нравится почти всем. Соус готовят из сочных спелых томатов с базиликом, 
+				пармезаном и чесноком. Получается сочно, свежо и сытно.</p>
 			<p><b>Стоимость 1 порции: 350 рублей.</b></p>
 			<b>Состав:</b>
 			<ul>
