--- a/inner6.html
+++ b/inner6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Паста Лингуини</title>
+	<title><span itemprop=”name”>Паста Лингуини</span></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -109,9 +109,11 @@ e.target.style.setProperty('--y', y + 'px');
 </div>
 
 		<div class="footer clearfix">
-			
 			<div class="rights">
-				<h1><p><h2>Горячая линия:</h2> </p> <p><h2> +7 999 999 9999</h2></p></h1>
+				<h1><p><h2>Горячая линия:</h2> </p> <span itemprop=”telephone”>
+				<p><h2> +7 999 999 9999</h2></p></span>
+				<p><h3><center>ул.Пушкина 47</center></h3></p>
+				</h1>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
@@ -136,7 +138,8 @@ e.target.style.setProperty('--y', y + 'px');
 		<section class="wrapper">
 			<div class="content">
 			<h1 class="title">Паста ''Лингуини'' с помидорами и креветками</h1>
-				<p>Linguine – узкая плоская паста, которая не подходит для подачи с густыми соусами. Она тоньше феттуччине, но шире спагетти. Последние не принято готовить с песто или морепродуктами, их лучшая компания – лингуине. Ее готовят с крупными креветками, сочной зеленью и чесноком.</p>
+				<p>Linguine – узкая плоская паста, которая не подходит для подачи с густыми соусами. Она тоньше феттуччине, но шире спагетти. 
+				Последние не принято готовить с песто или морепродуктами, их лучшая компания – лингуине. Ее готовят с крупными креветками, сочной зеленью и чесноком.</p>
 			<p><b>Стоимость 1 порции: 450 рублей.</b></p>
 			<b>Состав:</b>
 			<ul>
