--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<span itemprop=”name”><title>Lazio</title></span>
+	<title>Lazio</title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "еда доставка, еда новосибирск, заказать еду, Паста новосибирск, Обед доставка, Итальянская кухня, Лацио ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
