--- a/inner1.html
+++ b/inner1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title><span itemprop=”name”>Паста карбонара</span></title>
+	<title>Паста карбонара</title>
 	<meta charset="utf-8">
 	<meta name = "keywords" content = "Паста карбонара, Лацио, паста">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
